--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src='js/app.min.js'></script>
+		<script src='build/app.min.js'></script>
 	</head>
 	<body>
 		<div id="content"></div>
