Added film details logic

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<script src='build/app.min.js'></script>
 	</head>
 	<body>
+		<header>XTREAMER FILMS</header>
 		<div id="content"></div>
 	</body>
 </html>
