Add css first file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
+<!doctype html>
+<html lang="en">
 	<head>
-		<script src='build/app.min.js'></script>
+		<meta charset="utf-8">
+		<meta name="description" content="Xtreamer Films">
+		<title>Xtreamer Films</title>
+		<link rel="stylesheet" type="text/css" href="src/css/main.css">
+		<script src='build/app.min.js' type="text/javascript"></script>
 	</head>
 	<body>
 		<header>XTREAMER FILMS</header>
