Add infinite scroll

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="Xtreamer Films">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Xtreamer Films</title>
+
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 		<link rel="stylesheet" type="text/css" href="src/css/main.css">
 		<script src='build/app.min.js' type="text/javascript"></script>
 	</head>
 	<body>
-		<header>XTREAMER FILMS</header>
-		<div id="content"></div>
+		<div class="outer-wrap">
+			<h1>XTREAMER FILMS</h1>
+			<div class="content">
+				<div id="main-area" class="main-area"></div>
+			</div>
+		</div>
 	</body>
 </html>
